<?xml version="1.0" encoding="utf-8"?>
<com.urbanairship.messagecenter.ui.view.MessageListView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/list"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />
