<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="Home" />

        <item
            android:id="@+id/nav_message_center"
            android:icon="@drawable/ic_menu_mcrap"
            app:actionLayout="@layout/mc_unread_count"
            android:title="Message Center" />

        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_menu_location"
            android:title="Location" />

        <item
            android:id="@+id/nav_debug"
            android:icon="@drawable/ic_debug"
            android:title="Debug" />
    </group>

</menu>