<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/Widget.UrbanAirship.MessageCenter.Item.Container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <CheckBox
        android:id="@+id/checkbox"
        style="@style/Widget.UrbanAirship.MessageCenter.Item.CheckBox" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:labelFor="@+id/checkbox"
            style="@style/Widget.UrbanAirship.MessageCenter.Item.Title"
            tools:text="title" />

        <TextView
            android:id="@+id/date"
            style="@style/Widget.UrbanAirship.MessageCenter.Item.Date"
            tools:text="1/8/16" />

    </LinearLayout>

</LinearLayout>
